JumpScript/tests/baselines/reference/conditionalExpressionNewLine5.errors.txt
tests/cases/compiler/conditionalExpressionNewLine5.jump(1,9): error TS2304: Cannot find name 'a'.
tests/cases/compiler/conditionalExpressionNewLine5.jump(1,13): error TS2304: Cannot find name 'b'.
tests/cases/compiler/conditionalExpressionNewLine5.jump(2,5): error TS2304: Cannot find name 'c'.


==== tests/cases/compiler/conditionalExpressionNewLine5.jump (3 errors) ====
    var v = a ? b 
            ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS2304: Cannot find name 'b'.
      : c;
        ~
!!! error TS2304: Cannot find name 'c'.